Fix image stretch on phones

--- a/css/project-page.css
+++ b/css/project-page.css
@@ -445,6 +445,10 @@ figure img{
     grid-area:moodboard;
 }
 
+.project-gif{
+    object-fit: cover;
+}
+
 /* PROCESS SECTION ========================================================= */
 
 #process section{
